fix spacing on @media for pic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,5 +18,11 @@ body {
 @media screen and (max-width: 767px) {
   #myPic {
     min-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #aboutMe {
+    min-width: 100%;
   }
 }
